Compiler Bouw/compiler/test/basic/stephen/fail/floating_comma.cvc
void (5, 6,) {}

export int main() {
    foo(4, 6);
    return 0;
}
